--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pino-pretty": "^11.2.2"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
